# Tink_HW_6

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: CICD.yml
docker/server/: Dockerfile
docker/tests/: Dockerfile
src/: data_manager.py  main.py  schemas.py
tests/: test_main.py
